# PyEnhanceImage

./: 0. 论文要点（与实现关联）.md  AUTO_OPTIMIZE_DEBUG_GUIDE.md  BUGFIX_REPORT.md  CPP_ACCELERATION_GUIDE.md  CRITICAL_MEMORY_FIX.md  IMAGE_ENHANCEMENT_UPGRADE_PLAN.md  IMPLEMENTATION_COMPLETE_REPORT.md  IMPLEMENTATION_PLAN.md  INVERT_FEATURE_GUIDE.md  MEMORY_OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  SMART_SLIDER_RANGES_GUIDE.md  SPINBOX_INPUT_GUIDE.md  STAGE1_COMPLETION_REPORT.md  STAGE2_COMPLETION_REPORT.md  STAGE3_COMPLETION_REPORT.md  TEST_DATA.md  USER_GUIDE.md  USER_INTERACTION_GUIDE.md  ZOOM_STATE_FIX.md  build_cpp.py  main.py  pyproject.toml  python和cpp一起用.md  setup.py  start.bat  test.py  test_button_enable.py  test_button_fix.py  test_cpp_button.py  test_dicom_enhance.py  test_fast_nlm_integration.py  test_large_image_debug.py  test_optimized_window_enhance.py  test_paper_enhance_ui.py  test_real_image.py  test_real_image_fast.py  test_synthetic_image.py  (+3 more)
.claude/: settings.local.json
cpp/: poisson_nlm.cpp  test_compile.cpp
src/: __init__.py  main.py
src/core/: dicom_enhancer.py  edge_processor.py  frequency_processor.py  image_analyzer.py  image_manager.py  image_processing_thread.py  image_processor.py  image_pyramid.py  paper_enhance.py  window_based_enhancer.py  (+1 more)
tests/: gaoji_enhance.py  test_basic_threading.py  test_fixes.py  test_memory_simple.py  test_memory_usage.py  test_multithreading.py  test_performance.py  test_pyramid_core.py  test_window_level_performance.py  test_zoom_optimization.py
(+7 files in other folders)
