[project]
name = "pyenhanceimage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "opencv-python>=4.8.0",
    "pydicom>=3.0.1",
    "pyqt6>=6.9.1",
    "scikit-image>=0.25.2",
]
